--- a/bmi2.0/Base.lproj/Main.storyboard
+++ b/bmi2.0/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AvY-EC-BBu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="185-Ff-DgV">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -40,7 +40,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gJj-5Y-iuq">
-                                <rect key="frame" x="75" y="518" width="170" height="30"/>
+                                <rect key="frame" x="75" y="480" width="170" height="30"/>
                                 <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Find out your body index">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -57,12 +57,12 @@
                             <constraint firstItem="WhC-2c-hWZ" firstAttribute="baseline" secondItem="stq-Eu-vs4" secondAttribute="baseline" id="DHc-b7-6kh"/>
                             <constraint firstItem="eIm-bW-KJm" firstAttribute="baseline" secondItem="stq-Eu-vs4" secondAttribute="baseline" id="SGb-Qj-Qny"/>
                             <constraint firstItem="stq-Eu-vs4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WXT-e2-VrX"/>
-                            <constraint firstItem="gJj-5Y-iuq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wg1-Km-UWn"/>
                             <constraint firstItem="gPU-2a-SvR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZFP-Gy-nNP"/>
                             <constraint firstItem="eIm-bW-KJm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="eC3-zd-5he"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gJj-5Y-iuq" secondAttribute="bottom" constant="9" id="i95-sS-erb"/>
                             <constraint firstItem="WhC-2c-hWZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="171" id="laY-Xg-oAQ"/>
-                            <constraint firstItem="gJj-5Y-iuq" firstAttribute="top" secondItem="gPU-2a-SvR" secondAttribute="bottom" constant="32" id="pFg-r9-pNM"/>
                             <constraint firstItem="WhC-2c-hWZ" firstAttribute="leading" secondItem="stq-Eu-vs4" secondAttribute="trailing" constant="49" id="x9r-qK-b9n"/>
+                            <constraint firstItem="gJj-5Y-iuq" firstAttribute="centerX" secondItem="gPU-2a-SvR" secondAttribute="centerX" id="zbm-JD-kNn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -73,7 +73,85 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1291.875" y="498.59154929577466"/>
+            <point key="canvasLocation" x="2229.5999999999999" y="497.90104947526243"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="PSa-j5-bRs">
+            <objects>
+                <tableViewController id="vL5-Nx-tE8" customClass="TableViewController" customModule="bmi2_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="usc-7V-KCP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="MIh-F1-2RK">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MIh-F1-2RK" id="RcE-UG-d3K">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vL5-Nx-tE8" id="Chz-kb-rVM"/>
+                            <outlet property="delegate" destination="vL5-Nx-tE8" id="BXE-EH-sJD"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Settings" id="K9Y-Jh-aPe"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="llG-RQ-fbT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2147" y="1427"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6WE-Tb-n5r">
+            <objects>
+                <viewController storyboardIdentifier="settingsTheme" id="S7h-Hm-PC5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yKp-ve-Pmg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="83M-cg-9jN">
+                                <rect key="frame" x="16" y="20" width="51" height="31"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dark" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gic-is-u2V">
+                                <rect key="frame" x="71" y="25" width="36" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Gic-is-u2V" firstAttribute="leading" secondItem="83M-cg-9jN" secondAttribute="trailing" constant="6" id="TxD-Gh-W4E"/>
+                            <constraint firstItem="83M-cg-9jN" firstAttribute="leading" secondItem="yKp-ve-Pmg" secondAttribute="leadingMargin" id="WTi-jq-9vR"/>
+                            <constraint firstItem="83M-cg-9jN" firstAttribute="top" secondItem="csM-fC-Tsd" secondAttribute="top" id="lAO-29-d9g"/>
+                            <constraint firstItem="Gic-is-u2V" firstAttribute="centerY" secondItem="83M-cg-9jN" secondAttribute="centerY" id="u8V-L7-vaP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="csM-fC-Tsd"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eER-q9-JCZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3136" y="1421"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="2Qd-x0-ZOr">
+            <objects>
+                <navigationController id="ES2-bh-BcZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Settings" id="nNc-Az-eha"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Nc-zV-4K2">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vL5-Nx-tE8" kind="relationship" relationship="rootViewController" id="GRw-Bi-AWt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Wa-pq-L78" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1223" y="1308"/>
         </scene>
         <!--Calc Bmi View Controller-->
         <scene sceneID="nLo-Az-wcL">
@@ -90,9 +168,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hbS-Te-9QX">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqd-Lo-yhm">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqd-Lo-yhm">
                                         <rect key="frame" x="8" y="8" width="304" height="270"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="270" id="tiK-Bg-3uU"/>
@@ -110,13 +188,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.86274509803921573" green="0.26666666666666666" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="QCv-7T-rXE" firstAttribute="top" secondItem="j0D-hb-wgj" secondAttribute="top" constant="405" id="6ak-xU-ODg"/>
                             <constraint firstItem="hbS-Te-9QX" firstAttribute="bottom" secondItem="j0D-hb-wgj" secondAttribute="bottom" id="BNy-6H-EEq"/>
+                            <constraint firstItem="j0D-hb-wgj" firstAttribute="bottom" secondItem="QCv-7T-rXE" secondAttribute="bottom" constant="29" id="CEe-sg-rJs"/>
                             <constraint firstItem="hbS-Te-9QX" firstAttribute="leading" secondItem="j0D-hb-wgj" secondAttribute="leading" id="F4T-w1-eNd"/>
-                            <constraint firstItem="j0D-hb-wgj" firstAttribute="bottom" secondItem="QCv-7T-rXE" secondAttribute="bottom" constant="78" id="U5B-RF-FHw"/>
+                            <constraint firstItem="QCv-7T-rXE" firstAttribute="centerX" secondItem="hbS-Te-9QX" secondAttribute="centerX" id="HnE-HJ-8gn"/>
                             <constraint firstItem="hbS-Te-9QX" firstAttribute="trailing" secondItem="j0D-hb-wgj" secondAttribute="trailing" id="Waz-Lg-fJ6"/>
                             <constraint firstItem="hbS-Te-9QX" firstAttribute="top" secondItem="j0D-hb-wgj" secondAttribute="top" id="XHB-u4-dej"/>
-                            <constraint firstItem="QCv-7T-rXE" firstAttribute="centerX" secondItem="FVf-0O-E0n" secondAttribute="centerX" id="tDU-lb-fxH"/>
+                            <constraint firstItem="QCv-7T-rXE" firstAttribute="top" secondItem="j0D-hb-wgj" secondAttribute="top" constant="405" id="xHR-1W-yqd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="j0D-hb-wgj"/>
                     </view>
@@ -129,12 +207,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wtH-d8-IuA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2274.375" y="499.64788732394368"/>
+            <point key="canvasLocation" x="3212" y="498.80059970014997"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--BMI-->
         <scene sceneID="lCT-OB-6Rh">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AvY-EC-BBu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="BMI" id="jH0-fi-Rl6"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Jnm-3y-VyX">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -147,7 +226,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Qy-V3-D6P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="173" y="500"/>
+            <point key="canvasLocation" x="1111.2" y="499.70014992503752"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="983-6y-Lyz">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="185-Ff-DgV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7F2-2V-ulq">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="AvY-EC-BBu" kind="relationship" relationship="viewControllers" id="Uvz-r7-kvk"/>
+                        <segue destination="ES2-bh-BcZ" kind="relationship" relationship="viewControllers" id="USF-Ui-VzZ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RyR-Lb-9IN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="172" y="499.70014992503752"/>
         </scene>
     </scenes>
 </document>
