--- a/bmi2.0/Sto/Sign.storyboard
+++ b/bmi2.0/Sto/Sign.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sov-cv-dwE">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,48 +15,51 @@
             <objects>
                 <viewController id="oMm-Vh-690" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NSp-WA-fnI">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdK-cs-mGR">
-                                <rect key="frame" x="124" y="133" width="72" height="36"/>
+                                <rect key="frame" x="151.5" y="133" width="72" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XUJ-4s-hNR">
-                                <rect key="frame" x="16" y="177" width="288" height="30"/>
+                                <rect key="frame" x="16" y="177" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEr-gV-k82">
-                                <rect key="frame" x="97.5" y="215" width="125" height="36"/>
+                                <rect key="frame" x="125" y="215" width="125" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JOY-pq-qt5">
-                                <rect key="frame" x="16" y="259" width="288" height="30"/>
+                                <rect key="frame" x="16" y="259" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRw-ke-qAf">
-                                <rect key="frame" x="146.5" y="432" width="27" height="30"/>
+                                <rect key="frame" x="174" y="432" width="27" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CMt-Ci-PIN">
-                                <rect key="frame" x="114" y="297" width="92" height="48"/>
+                                <rect key="frame" x="141.5" y="297" width="92" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <state key="normal" title="ENTER"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhn-lP-f2g">
-                                <rect key="frame" x="95" y="477" width="130" height="42"/>
+                                <rect key="frame" x="122.5" y="477" width="130" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Registration"/>
+                                <connections>
+                                    <segue destination="Hmb-pX-G92" kind="show" id="dua-EA-tAF"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -88,12 +91,100 @@
             </objects>
             <point key="canvasLocation" x="-148.125" y="499.64788732394368"/>
         </scene>
+        <!--Registration-->
+        <scene sceneID="ujW-w0-yf6">
+            <objects>
+                <viewController id="Hmb-pX-G92" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jmS-hS-zRy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2h-I4-V7Y">
+                                <rect key="frame" x="16" y="80" width="147" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hgm-RS-daZ">
+                                <rect key="frame" x="16" y="112" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your surname:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKZ-s2-4t5">
+                                <rect key="frame" x="16" y="150" width="174" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Wk-PS-7Ih">
+                                <rect key="frame" x="16" y="182" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VVL-Wv-tPA">
+                                <rect key="frame" x="16" y="220" width="145" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S9X-eq-gbd">
+                                <rect key="frame" x="16" y="252" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LpW-rt-fXk">
+                                <rect key="frame" x="16" y="290" width="140" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x5i-fY-9aH">
+                                <rect key="frame" x="16" y="318" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5Wk-PS-7Ih" firstAttribute="top" secondItem="FKZ-s2-4t5" secondAttribute="bottom" constant="8" id="0YC-Rc-RBa"/>
+                            <constraint firstItem="7g0-bt-i4w" firstAttribute="trailing" secondItem="Hgm-RS-daZ" secondAttribute="trailing" constant="16" id="3n6-nB-jtl"/>
+                            <constraint firstItem="H2h-I4-V7Y" firstAttribute="top" secondItem="7g0-bt-i4w" secondAttribute="top" constant="16" id="3tw-sS-5jh"/>
+                            <constraint firstItem="VVL-Wv-tPA" firstAttribute="top" secondItem="5Wk-PS-7Ih" secondAttribute="bottom" constant="8" id="4jB-WT-STQ"/>
+                            <constraint firstItem="7g0-bt-i4w" firstAttribute="trailing" secondItem="x5i-fY-9aH" secondAttribute="trailing" constant="16" id="9RM-xf-47d"/>
+                            <constraint firstItem="7g0-bt-i4w" firstAttribute="trailing" secondItem="5Wk-PS-7Ih" secondAttribute="trailing" constant="16" id="EGS-Dk-iPQ"/>
+                            <constraint firstItem="x5i-fY-9aH" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="MZL-2s-lmr"/>
+                            <constraint firstItem="LpW-rt-fXk" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="Nbf-MU-kXi"/>
+                            <constraint firstItem="Hgm-RS-daZ" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="QPB-yS-nYC"/>
+                            <constraint firstItem="LpW-rt-fXk" firstAttribute="top" secondItem="S9X-eq-gbd" secondAttribute="bottom" constant="8" id="Tvg-QF-ryW"/>
+                            <constraint firstItem="S9X-eq-gbd" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="XvD-xz-hob"/>
+                            <constraint firstItem="FKZ-s2-4t5" firstAttribute="top" secondItem="Hgm-RS-daZ" secondAttribute="bottom" constant="8" id="YdC-2Z-wXm"/>
+                            <constraint firstItem="x5i-fY-9aH" firstAttribute="top" secondItem="LpW-rt-fXk" secondAttribute="bottom" constant="4" id="a9N-fe-zSY"/>
+                            <constraint firstItem="VVL-Wv-tPA" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="cc6-5e-ATB"/>
+                            <constraint firstItem="FKZ-s2-4t5" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="geE-4E-Ifs"/>
+                            <constraint firstItem="5Wk-PS-7Ih" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="h4l-T6-bh5"/>
+                            <constraint firstItem="7g0-bt-i4w" firstAttribute="trailing" secondItem="S9X-eq-gbd" secondAttribute="trailing" constant="16" id="iXE-f9-n4P"/>
+                            <constraint firstItem="Hgm-RS-daZ" firstAttribute="top" secondItem="H2h-I4-V7Y" secondAttribute="bottom" constant="8" id="nCl-HY-6db"/>
+                            <constraint firstItem="S9X-eq-gbd" firstAttribute="top" secondItem="VVL-Wv-tPA" secondAttribute="bottom" constant="8" id="oaJ-QN-fSU"/>
+                            <constraint firstItem="H2h-I4-V7Y" firstAttribute="leading" secondItem="7g0-bt-i4w" secondAttribute="leading" constant="16" id="wBX-3Y-dOW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7g0-bt-i4w"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Registration" id="yNo-Un-VrQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hwU-1H-l2v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="736.79999999999995" y="497.90104947526243"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="kfr-D5-iFn">
             <objects>
                 <navigationController id="Sov-cv-dwE" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ULE-aF-Qbg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
